updates to support s3 and sni

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ icecube is maintained by the U.S. Department of Defense, Defense Digital Service
 
 Authors:
 
-* Patrick Dufour (pjdufour-dds)
+* Patrick Dufour (pjdufour-dds, pjdufour-pac)
